--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
     "bcryptjs": "^3.0.2",
+    "face-api.js": "^0.22.2",
     "ionicons": "^8.0.13",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
