--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_GOOGLE_CLIENT_ID=your-google-client-id
+VITE_APP_URL=http://localhost:5173
